--- a/lib/rienkun_web/templates/login/login.html.eex
+++ b/lib/rienkun_web/templates/login/login.html.eex
@@ -1,3 +1,6 @@
+<div>
+    Veuillez entrer votre nom pour vous joindre à la partie.
+</div>
 <form action="/" method="post">
     <input type="hidden" name="_csrf_token" value="<%= Phoenix.Controller.get_csrf_token() %>">
     <input type="text" name="name"/>
