--- a/lib/rienkun_web/templates/login/login.html.eex
+++ b/lib/rienkun_web/templates/login/login.html.eex
@@ -9,7 +9,7 @@
 </div>
 <div class="row">
   <div class="column">
-    <form action="/" method="post">
+    <form action="/" method="post" autocomplete="off">
       <fieldset>
         <input type="hidden" name="_csrf_token" value="<%= Phoenix.Controller.get_csrf_token() %>">
         <label for="name">Nom</label>
