--- a/lib/rienkun_web/live/game_live.html.leex
+++ b/lib/rienkun_web/live/game_live.html.leex
@@ -21,6 +21,9 @@
       <% end %>
     </ul>
     <%= if @game.state != :waiting_for_players and @game.state != :ready do %>
+      <%= if !Map.has_key?(@game.players, @game.guesser) do %>
+        <p>Le joueur actif a quitté la salle! Cliquez sur le bouton ci-dessous pour annuler la partie.</p>
+      <% end %>
       <button phx-click="reset_vote">Annuler</button>
       <%= if @game.reset_votes != %{} do %>
         <p>Votes: <%= Enum.count(@game.reset_votes) %>/<%= Enum.count(@game.players) %></p>
