--- a/lib/rienkun_web/templates/login/login.html.eex
+++ b/lib/rienkun_web/templates/login/login.html.eex
@@ -8,7 +8,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="column">
+  <div class="column column-50 column-offset-25">
     <form action="/" method="post" autocomplete="off">
       <fieldset>
         <input type="hidden" name="_csrf_token" value="<%= Phoenix.Controller.get_csrf_token() %>">
