--- a/lib/rienkun_web/live/game_live.html.leex
+++ b/lib/rienkun_web/live/game_live.html.leex
@@ -69,7 +69,7 @@
           Votre indice est: <strong><%= @game.clues[@current_user] %></strong>
         <% end %>
         <form phx-submit="add_clue" autocomplete="off">
-          <input type="text" name="word"/>
+          <input type="text" name="word" id="word" phx-hook="AutoFocus"/>
           <input type="submit" value="Envoyer"/>
         </form>
       <% end %>
@@ -125,7 +125,7 @@
         </ul>
         <p>Devinez le mot mystère à l'aide des indices.</p>
         <form phx-submit="guess_word" autocomplete="off">
-          <input type="text" name="word"/>
+          <input type="text" name="word" id="word" phx-hook="AutoFocus"/>
           <input type="submit" value="Envoyer"/>
         </form>
       <% else %>
