--- a/lib/rienkun_web/templates/login/login.html.eex
+++ b/lib/rienkun_web/templates/login/login.html.eex
@@ -3,7 +3,9 @@
     <center>
       <h1>Rienkun</h1>
       <p>Un clône du jeu "Just One".</p>
-      <p>Veuillez entrer votre nom pour vous joindre à la partie.</p>
+      <p>
+        Veuillez entrer votre nom et le nom d'une salle de jeu pour vous joindre à la partie.
+      </p>
     </center>
   </div>
 </div>
@@ -12,9 +14,11 @@
     <form action="/" method="post" autocomplete="off">
       <fieldset>
         <input type="hidden" name="_csrf_token" value="<%= Phoenix.Controller.get_csrf_token() %>">
-        <label for="name">Nom</label>
-        <input type="text" name="name" autofocus/>
-        <input type="submit"/>
+        <label for="name">Nom du joueur</label>
+        <input type="text" name="name" value="<%= @name %>" autofocus/>
+        <label for="name">Nom de la salle</label>
+        <input type="text" name="room" value="<%= @room %>"/>
+        <input type="submit" value="Entrer"/>
       </fieldset>
     </form>
   </div>
