Ajustements visuels multiples et ordre des joueurs persistant.

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -89,3 +89,9 @@
   display: block;
   margin: -1rem 0 2rem;
 }
+
+/* Other styles */
+button.btn-danger, input.btn-danger {
+  background-color: #a94442;
+  border-color: #f2dede;
+}
