--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -99,3 +99,9 @@ button.btn-danger, input.btn-danger {
 .hidden {
   display: none;
 }
+
+@media (min-width: 40.0rem) {
+  .row-reverse {
+    flex-direction: row-reverse;
+  }
+}
